--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.5",
     "@nestjs/platform-express": "^9.0.0",
+    "@willsoto/nestjs-prometheus": "^5.1.1",
     "graphql": "^16.6.0",
+    "prom-client": "^14.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
