Added winston logger to nestjs

--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/platform-express": "^9.0.0",
     "@willsoto/nestjs-prometheus": "^5.1.1",
     "graphql": "^16.6.0",
+    "nest-winston": "^1.9.1",
     "prom-client": "^14.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
